--- a/style/museum.css
+++ b/style/museum.css
@@ -39,6 +39,10 @@ body {
     color: lime;
 }
 
+a {
+    text-decoration: none;
+}
+
 .title{
     margin-top: 1.5rem;
     text-align: center;
@@ -82,6 +86,7 @@ img {
     text-align: center;
     padding: 1.4rem;
 }
+
 
 @media (min-width: 100px) and (max-width: 600px) {
     body {
